--- a/techpack/audio/Makefile
+++ b/techpack/audio/Makefile
@@ -1,35 +1,42 @@
 # auto-detect subdirs
 ifeq ($(CONFIG_ARCH_SDXPOORWILLS), y)
 include $(srctree)/techpack/audio/config/sdxpoorwillsauto.conf
-export
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/sdxpoorwillsauto.conf)
 endif
 ifeq ($(CONFIG_ARCH_SM8150), y)
 include $(srctree)/techpack/audio/config/sm8150auto.conf
-export
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/sm8150auto.conf)
 endif
 ifeq ($(CONFIG_ARCH_SDMSHRIKE), y)
 include $(srctree)/techpack/audio/config/sm8150auto.conf
-export
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/sm8150auto.conf)
 endif
 ifeq ($(CONFIG_ARCH_KONA), y)
 ifeq ($(PROJECT_NAME),$(filter $(PROJECT_NAME),x1q y2q z3q))
 include $(srctree)/techpack/audio/config/kona_picassoq.conf
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/kona_picassoq.conf)
 else ifeq ($(PROJECT_NAME),$(filter $(PROJECT_NAME),c1q c2q))
 include $(srctree)/techpack/audio/config/kona_canvasq.conf
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/kona_canvasq.conf)
 else ifeq ($(PROJECT_NAME),$(filter $(PROJECT_NAME),f2q win2q))
 include $(srctree)/techpack/audio/config/kona_f2.conf
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/kona_f2.conf)
 else ifeq ($(PROJECT_NAME),$(filter $(PROJECT_NAME),gts7l gts7lwifi gts7xl gts7xlwifi))
 include $(srctree)/techpack/audio/config/kona_gts7xl.conf
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/kona_gts7xl.conf)
 else ifeq ($(PROJECT_NAME),$(filter $(PROJECT_NAME),bloomxq))
 include $(srctree)/techpack/audio/config/kona_bloomx.conf
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/kona_bloomx.conf)
 else ifeq ($(PROJECT_NAME),$(filter $(PROJECT_NAME),r8q))
 include $(srctree)/techpack/audio/config/kona_r8.conf
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/kona_r8.conf)
 else ifeq ($(PROJECT_NAME),$(filter $(PROJECT_NAME),victory))
 include $(srctree)/techpack/audio/config/kona_victory.conf
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/kona_victory.conf)
 else
 include $(srctree)/techpack/audio/config/konaauto.conf
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/konaauto.conf)
 endif
-export
 endif
 ifeq ($(CONFIG_ARCH_SDM660), y)
 include $(srctree)/techpack/audio/config/sdm660auto.conf
