WIP: qca6390: disable git log to pass compile
cause the commit log is removed by samsung, this behavior cause build to fail

--- a/drivers/net/wireless/qualcomm/qca6390/qcacld-3.0/Kbuild
+++ b/drivers/net/wireless/qualcomm/qca6390/qcacld-3.0/Kbuild
@@ -3373,7 +3373,8 @@ else
 endif
 
 # inject some build related information
-ifeq ($(CONFIG_BUILD_TAG), y)
+#ifeq ($(CONFIG_BUILD_TAG), y)
+ifeq (0, 1)
 CLD_CHECKOUT = $(shell cd "$(WLAN_ROOT)" && \
 	git reflog | grep -vm1 "}: cherry-pick: " | grep -oE ^[0-f]+)
 CLD_IDS = $(shell cd "$(WLAN_ROOT)" && \
